[#43507145] Prevent double scrollbar on dataset preview dialog.

--- a/app/assets/stylesheets/dataset/_dataset_preview.scss
+++ b/app/assets/stylesheets/dataset/_dataset_preview.scss
@@ -3,9 +3,7 @@
 
     &.dialog {
         .dialog_content {
-            padding-left: 0;
-            padding-right: 0;
-            padding-top: 0;
+            padding: 0;
         }
 
         h1 {
@@ -16,6 +14,7 @@
 
     .modal_controls {
         margin-right: $dialog-padding;
+        padding-bottom: 10px;
     }
 
     .results_console {
